[package]
name = "tunneler"
version = "0.1.0"
authors = ["Daniel Segal <dlemel8@gmail.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "DNS tunneling and TCP proxy"
repository = "https://github.com/dlemel8/tunneler"
readme = "README.md"
keywords = ["dns", "tcp", "tcp-proxy", "dns-tunneling"]
categories = ["asynchronous", "network-programming", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.11.0"
tokio = { version = "1.4.0", features = ["full"] }
structopt = { version = "0.3", default-features = false }
async-trait = "0.1.50"
trust-dns-client = { version = "0.20.3", default-features = false }
trust-dns-server = "0.20.3"
trust-dns-resolver = "0.20.3"
hex = "0.4"
async-channel = "1.6.1"
rand = "0.8.4"

[dev-dependencies]
tokio-test = "0.4.2"
mockall = "0.9.1"

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
