[package]
name = "client"
version = "0.1.0"
authors = ["Daniel Segal <dlemel8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.11.0"
tokio = { version = "1.4.0", features = ["full"] }
structopt = { version = "0.3", default-features = false }